--- a/views/home/produtos.ejs
+++ b/views/home/produtos.ejs
@@ -1,6 +1,6 @@
-    <link rel="stylesheet" href="/css/produtos.css">
-    <title>Produtos</title>
-    <%- include('../partials/header') %>
+<link rel="stylesheet" href="/css/produtos.css">
+<title>Produtos</title>
+<%- include('../partials/header') %>
     <main>
         <section id="produto" class="produto">
             <h1>Notebook Asus</h1>
@@ -21,12 +21,8 @@
                     <i class="fa-solid fa-star"></i>
                     <div><span>R$ 1200,00</span></div>
                     <h3>Sobre este produto</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam similique aperiam, delectus
-                        libero temporibus est ratione, earum mollitia vel minima consequatur, praesentium voluptates
-                        nemo esse iste exercitationem hic dolore debitis!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto doloremque dolores modi enim est?
-                        Atque quisquam ullam enim non, vel velit officia laboriosam voluptas, nihil perspiciatis
-                        corrupti eveniet accusantium maxime?
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam similique aperiam, delectus libero temporibus est ratione, earum mollitia vel minima consequatur, praesentium voluptates nemo esse iste exercitationem hic dolore debitis!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto doloremque dolores modi enim est? Atque quisquam ullam enim non, vel velit officia laboriosam voluptas, nihil perspiciatis corrupti eveniet accusantium maxime?
                     </p>
                     <!-- produto em si entra aqui -->
                 </div>
@@ -53,12 +49,12 @@
                     <img src="images/notebook.jpg" alt="Notebook">
                     <button id="#">Ver Mais</button>
                 </div>
-    
+
                 <div class="card">
                     <img src="images/GAMER.png" alt="">
                     <button id="#">Ver Mais</button>
                 </div>
-    
+
                 <div class="card">
                     <img src="images/CELULAR-SMARTPHONE_1645045581.png" alt="">
                     <button id="#">Ver Mais</button>
@@ -77,9 +73,7 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, voluptatibus molestias sit
-                    cupiditate quos animi incidunt quis doloribus laboriosam, dolor quaerat consequatur? Error sunt
-                    ipsum, sint alias quae ut sapiente?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, voluptatibus molestias sit cupiditate quos animi incidunt quis doloribus laboriosam, dolor quaerat consequatur? Error sunt ipsum, sint alias quae ut sapiente?</p>
             </div>
 
             <div class="div-users">
@@ -87,9 +81,7 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star-half-stroke"></i>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, voluptatibus molestias sit
-                    cupiditate quos animi incidunt quis doloribus laboriosam, dolor quaerat consequatur? Error sunt
-                    ipsum, sint alias quae ut sapiente?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, voluptatibus molestias sit cupiditate quos animi incidunt quis doloribus laboriosam, dolor quaerat consequatur? Error sunt ipsum, sint alias quae ut sapiente?</p>
             </div>
 
             <div class="div-users">
@@ -97,9 +89,7 @@
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
                 <i class="fa-solid fa-star"></i>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, voluptatibus molestias sit
-                    cupiditate quos animi incidunt quis doloribus laboriosam, dolor quaerat consequatur? Error sunt
-                    ipsum, sint alias quae ut sapiente?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, voluptatibus molestias sit cupiditate quos animi incidunt quis doloribus laboriosam, dolor quaerat consequatur? Error sunt ipsum, sint alias quae ut sapiente?</p>
             </div>
         </section>
 
@@ -119,15 +109,17 @@
                 <ul>
                     <li>Caracteristicas 2</li>
                     <ul>
-                        <li><tem isso</li>
-                        <li>tem aquilo</li>
-                        <li>tem aquele outro</li>
+                        <li>
+                            <tem isso</li>
+                                <li>tem aquilo</li>
+                                <li>tem aquele outro</li>
                     </ul>
                 </ul>
             </div>
         </section>
 
     </main>
-</body>
+    <%- include('../partials/footer') %>
+        </body>
 
-</html>
+        </html>
