--- a/public/css/addEditProduto.css
+++ b/public/css/addEditProduto.css
@@ -53,7 +53,7 @@ input[type="file"] {
   display: none;
 }
 
-label[for="foto-produto"] {
+label[for="imagem"] {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -69,7 +69,7 @@ label[for="foto-produto"] {
   transition: .5s;
 }
 
-label[for="foto-produto"]:hover{
+label[for="imagem"]:hover{
   background-color: rgb(5, 104, 141) ;
 
 }
