--- a/views/adm/adicionarProduto.ejs
+++ b/views/adm/adicionarProduto.ejs
@@ -7,21 +7,21 @@
     <div class="container">
       <h1>Cadastrar novo produto</h1>
       <div class="cadastro">
-      <form action="">
+      <form action="/adm/adicionar-produto" method="POST" enctype="multipart/form-data">
         <input type="text" name="nome" id="" placeholder="Nome do Produto">
         <input type="number" name="preco" min="1" step="any" placeholder="Preço">
-        <label for="foto-produto">Adicionar foto</label>
-        <input type="file" name="foto-produto" id="foto-produto">
+        <label for="imagem">Adicionar foto</label>
+        <input type="file" name="imagem" id="imagem">
         <div class="ativo">
         <input type="checkbox" name="ativo" id="ativo" placeholder="Produto ativo">
         <label for="">Ativo</label>
       </div>
-        <textarea name="descrição" cols="30" rows="10" placeholder="Descrição do Produto"></textarea>
+        <textarea name="descricao" cols="30" rows="10" placeholder="Descrição do Produto"></textarea>
+        <div class="buttons">
+          <button type="submit">Cadastrar</button>
+          
+        </div>
       </form>
-      <div class="buttons">
-        <button type="submit">Cadastrar</button>
-
-      </div>
 
     </div>
         
