--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -16,10 +16,10 @@
     <main>
         <div class="container">
             <h1>Login</h1>
-            <form action="#" method="post">
+            <form action="/login" method="POST">
                 <div class="wrapper">
-                    <label for="user" placeholder="email">Email</i></label>
-                    <input type="email" name="user" id="">
+                    <label for="email" placeholder="email">Email</i></label>
+                    <input type="email" name="email" id="">
                 </div>
 
                 <div class="wrapper">
@@ -33,7 +33,7 @@
                 </div>
 
             </form>
-            <button class="createAcount" id="createAcount">Criar sua conta <i class="fa-solid fa-plus"></i></button>
+            <button type="submit" class="createAcount" id="createAcount">Criar sua conta <i class="fa-solid fa-plus"></i></button>
         </div>
 
     </main>
