--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,14 +28,14 @@
         <div class="cart-user">
 
             <div class="cart">
-                <!-- VAI TER QUE ENTRAR UM BTN -->
-                <i class="fa-solid fa-cart-shopping"></i>
+                <!-- INCLUIR LOGICA DE QUANTIDADE DE ITENS COMO SPAN QUANDO TIVER ITENS NO CARRINHO -->
+                <button class="btn-carrinho"><i class="fa-solid fa-cart-shopping"></i></button>
                 <span>Meu Carrinho de Muambas</span>
             </div>
 
             <div class="user">
-                <!-- VAI TER QUE ENTRAR UM BTN -->
-                <i class="fa-solid fa-circle-user"></i>
+                <!-- INCLUIR LOGICA DE TROCA PARA NOME DE USER QUANDO LOGADO -->
+                <button class="btn-login"><a href="/login"><i class="fa-solid fa-circle-user"></i></a></button>
                 <span>Login</span>
             </div>
         </div>
