incluindo mensagens de erro e ajustes de codigo

--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -33,7 +33,7 @@
                 </div>
 
             </form>
-            <button type="submit" class="createAcount" id="createAcount">Criar sua conta <i class="fa-solid fa-plus"></i></button>
+            <a class="linkCreate" href="/cadastro"><button type="submit" class="createAcount" id="createAcount">Criar sua conta <i class="fa-solid fa-plus"></i></button></a>
         </div>
 
     </main>
