--- a/views/home/cadastro.ejs
+++ b/views/home/cadastro.ejs
@@ -1,28 +1,33 @@
-    <link rel="stylesheet" href="css/cadastro.css">
-    <link rel="shortcut icon" href="/images/logo-header.svg" type="image/x-icon">
-    <title>Cadastro</title>
-   
+<link rel="stylesheet" href="css/cadastro.css">
+<link rel="shortcut icon" href="/images/logo-header.svg" type="image/x-icon">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+<title>Cadastro</title>
 
- <body>
+
+<body>
   <section>
-    <div class="container">
-      <h1>Cadastra-se</h1>
-      <form action="">
-        <input type="email" name="user" id="" placeholder="Email">
-        <input type="password" name="password" id="" placeholder="Crie sua senha">
-        <input type="password" name="password" id="" placeholder="Confirme sua senha">
-        <input type="text" name="CPF" id="" placeholder="CPF">
-        <input type="text" name="CEP" id="" placeholder="CEP">
-      </form>
-      <div class="buttons">
-        <button type="submit">Cadastrar</button>
-  
-        <a href="./login" class="submit-button"  type="submit">Entrar</a>
-        
-
+    <% if(typeof error !=='undefined' ) { %>
+      <div class="alert alert-danger" role="alert">
+        <%= error %>
       </div>
-        
-    </div>
+      <% } %>
+        <div class="container-main">
+          <h1>Cadastra-se</h1>
+          <form action="/cadastrar" method="POST">
+            <input type="text" name="nome" placeholder="Nome Completo" required>
+            <input type="email" name="email" id="" placeholder="Email" required>
+            <input type="password" name="senha" id="" placeholder="Crie sua senha" minlength="6" required>
+            <input type="password" name="confirmaSenha" id="" placeholder="Confirme sua senha" minlength="6" required>
+            <input type="text" name="cpf" id="" placeholder="CPF" required>
+            <input type="text" name="cep" id="" placeholder="CEP" required>
+            <button class="btn-cadastro" type="submit">Cadastrar</button>
+          </form>
+          <div class="buttons">
+            <a href="/login" class="submit-button" type="submit">Entrar</a>
+          </div>
+
+        </div>
 
 
   </section>
