--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -16,26 +16,29 @@ body {
     background: linear-gradient(90deg, rgba(36,36,36,1) 0%, rgba(0,175,239,1) 90%);
 }
 
-.container{
+.container-main{
  background-color: #fff;
  width: 45rem;
- height: 60rem;
+ height: 70rem;
  margin-inline: auto;
  margin-block: 10rem;
  border-radius: .8rem;
  margin-top: 3rem;
 }
-.container h1{
+.container-main h1{
     text-align: center;
     font-size: 3rem;
     padding-top: 2rem;
 
 }
+
 form{
     display: flex;
     flex-direction: column;
     margin-top: 3rem;
     gap: 2.5rem;
+
+    font-size: 1.6rem;
 }
 form input{
  width: 70%;
@@ -51,6 +54,7 @@ form input{
     align-items: center;
     gap: 2rem;
 }
+
 button{
  width: 32rem;
  margin-top: 3rem;
@@ -86,6 +90,19 @@ a:nth-child(odd)::hover {
     background-color: #00AC33;
 }
    
-
-
+form .btn-cadastro {
+    display: flex;
+    font-size: 2.5rem;
+    border-radius: .5rem;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto 1.0rem;
     
+}
+
+.alert {
+    font-size: 1.6rem;
+    display: flex;
+    margin: 1.0rem auto;
+    width: 45rem;
+}
