refatorando links da aplicação

--- a/views/adm/painelAdmin.ejs
+++ b/views/adm/painelAdmin.ejs
@@ -14,7 +14,7 @@
       <div class="row">
         <div class="col botoes-adm">
           <h2>O que gostaria de fazer?</h2>
-          <button>Adicionar Novo Produto</button>
+          <a href="/adm/adicionar-produto"><button>Adicionar Novo Produto</button></a>
           <!-- <button>Editar Produto</button>
                 <button>Remover Produto</button> -->
         </div>
