corrigindo erros do ultimo commit

--- a/views/adm/editarProduto.ejs
+++ b/views/adm/editarProduto.ejs
@@ -12,7 +12,7 @@
         <input type="number" name="preco" min="1" step="any" placeholder="Preço">
         <input type="number" name="desconto" min="1" step="any" placeholder="Preço com desconto">
         <input type="number" name="estoque" min="1" step="any" placeholder="Estoque">
-        <select name="categorias" id="categorias" placeholder="Categorias">
+        <select name="categoria" id="categoria" placeholder="Categorias">
           <option value="" disabled>Selecione uma categoria</option>
           <option value="computadores">Computadores</option>
           <option value="notebooks">Notebooks</option>
