--- a/views/adm/adicionarProduto.ejs
+++ b/views/adm/adicionarProduto.ejs
@@ -7,7 +7,7 @@
     <div class="container">
       <h1>Cadastrar novo produto</h1>
       <div class="cadastro">
-      <form action="/adm/adicionar-produto" method="POST">
+      <form action="/adm/adicionar-produto" method="POST" enctype="multipart/form-data">
         <input type="text" name="nome" id="" placeholder="Nome do Produto">
           <input type="number" name="preco" min="1" step="any" placeholder="Preço">
           <input type="number" name="desconto" min="1" step="any" placeholder="Preço com desconto">
