--- a/public/css/headerLogado.css
+++ b/public/css/headerLogado.css
@@ -68,12 +68,16 @@ header {
 .user {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  line-height: 20px;
 }
 
 .user i {
   font-size: 50px;
   color: #1a495a;
-  margin-left: 3rem;
+
 }
 
 .user span {
