--- a/views/adm/editarProduto.ejs
+++ b/views/adm/editarProduto.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/addEditProduto.css">
 <title>Editar produto</title>
-<%- include('../partials/headerLogado') %> 
+<%- include('../partials/header') %> 
 
 <body>
   <section>
