--- a/views/adm/deletarProduto.ejs
+++ b/views/adm/deletarProduto.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/deleteProduto.css">
 <title>Tem certeza disso?</title>
-<%- include('../partials/headerLogado') %> 
+<%- include('../partials/header') %> 
 
 <body>
   <section>
