Adição do MVC na pagina inicial dos produtos

--- a/public/css/carrinho.css
+++ b/public/css/carrinho.css
@@ -26,6 +26,7 @@ h1 {
 
 .container {
   background-color: #FFFFFF;
+  margin-top: 20px;
   margin-inline: 7rem;
   margin-bottom: 5rem;
   padding-bottom: 4rem;
