--- a/views/partials/headerLogado.ejs
+++ b/views/partials/headerLogado.ejs
@@ -30,18 +30,18 @@
             <div class="cart">
                 <!-- VAI TER QUE ENTRAR UM BTN -->
                 <i class="fa-solid fa-cart-shopping"></i>
-                <span>Meu Carrinho de Muambas</span>
+                <span><a href="/carrinho">Meu Carrinho de Muambas</a></span>
             </div>
 
             <div class="user">
                 <!-- VAI TER QUE ENTRAR UM BTN -->
                 <i class="fa-solid fa-circle-user"></i>
-                <span>Olá, Usuário</span>
+                <span><a href="">Olá <%=usuario.nome %></a></span>
                 <div class="user-options">
                 <ul>
                   <li><a href="#">Minha Conta</a></li>
                   <li>|</li>
-                  <li><a href="#">Sair</a></li>
+                  <li><a href="/login">Sair</a></li>
                 </ul>
                 </div>
             </div>
