--- a/views/usuario/painelUsuario.ejs
+++ b/views/usuario/painelUsuario.ejs
@@ -99,7 +99,7 @@
         <div class="favs">
           <img src="images/notebook.jpg" alt="Notebook Asus">
         <div class="produto-favorito">
-          <h3>Notebook Asus</h3>
+          <h3><Notebook Asus></h3>
         </div>
         </div>
         <div class="data">
