--- a/public/css/categorias.css
+++ b/public/css/categorias.css
@@ -36,7 +36,8 @@ main h1 {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    justify-content: center;
+    margin-top: 20px;
+    justify-content: space-between;
     align-items: center;
     width: 200px;
     height: 200px;
