--- a/views/home/carrinho.ejs
+++ b/views/home/carrinho.ejs
@@ -1,122 +1,146 @@
-    <link rel="stylesheet" href="css/carrinho.css">
+<!DOCTYPE html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Products House</title>
+    <link rel="stylesheet" href="/css/global.css" />
+    <link rel="stylesheet" href="css/carrinho.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <style></style>
+  </head>
+  <body>
     <title>Carrinho</title>
-    <%- include('../partials/header') %> 
-<main>
-  <h1>Carrinho de Muambas</h1>
-  <section class='container'>
-    <div class="wrapper">
-      <div class="produto-selecionado">
-        <img src="images/notebook.jpg" alt="Notebook Asus">
-      <div class="descricao-produto">
-        <h2>Notebook Asus</h2>
-        <form action="">
-          <label for="quantidade">QTD</label>
-          <input type="number">
-          <button><i class="fa-solid fa-trash-can"></i></button>
-        </form>
-      </div>
-      </div>
-      <div class="preco">
-        <h2>R$754,00</h2>
-        <p>à vista ou em até</p>
-        <p>12x de R$ XXXXX sem juros</p>
-      </div>
-    </div>
-    <div class="wrapper">
-      <div class="produto-selecionado">
-        <img src="images/monitor.jpg" alt="Monitor muitas polegadas">
-      <div class="descricao-produto">
-        <h2>Monitor muitas polegadas</h2>
-        <form action="">
-          <label for="quantidade">QTD</label>
-          <input type="number">
-          <button><i class="fa-solid fa-trash-can"></i></button>
-        </form>      
-      </div>
-      </div>
-      <div class="preco">
-        <h2>R$1.500,00</h2>
-        <p>à vista ou em até</p>
-        <p>12x de R$ XXXXX sem juros</p>
-      </div>
-    </div>
-    <div class="subtotal">
-      <p>Subtotal (2 itens): <b> R$ 2.254,00</b> </p>
-    </div>
-    <div class="calcule-frete">
-      <p>Calcule o frete</p>
-      <form action="">
-        <input type="text" name="cep" id="cep" placeholder="Digite seu CEP">
-        <button type="submit">Calcular</button>
-      </form>
-    </div>
-  </section>
-  <section class="pagamento">
-    <h2>Forma de Pagamento</h2>
-    <div class="container">
-      <h3>Escolha sua forma de pagamento</h3>
-      <form action="">
-        <div class="formas-pgto">
-          <i class="fa-brands fa-pix"></i>
-          <input type="radio" name="pagamento" id="">
-          <label for="pix">PIX</label>
+    <%- include('../partials/header') %>
+    <main>
+      <section class="container">
+        <h1>Carrinho de Muambas</h1>
+        <table class="table table-dark table-striped table-bordered">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Imagem</th>
+              <th scope="col">Nome</th>
+              <th scope="col">Quatidade</th>
+              <th scope="col">Preço</th>
+              <th scope="col">Ações</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% if (!carrinho.length) { %>
+            <h3>Carrinho de muambas vazio!</h3>
+            <% } else {carrinho.forEach(produto => { %>
+            <tr>
+              <th scope="row"><%=produto.id%></th>
+              <td>
+                <img
+                  src="<%=produto.imagem%>"
+                  alt=""
+                  width="100px"
+                  height="100px"
+                />
+              </td>
+              <td><%=produto.nome%></td>
+              <td>1</td>
+              <td><%=produto.preco%></td>
+              <td>
+                <form
+                  action="/carrinho/<%=produto.id%>/remover?_method=DELETE"
+                  method="POST"
+                >
+                  <button type="submit" class="btn btn-danger">Excluir</button>
+                </form>
+              </td>
+            </tr>
+            <% }) %> <% } %>
+          </tbody>
+        </table>
+        <div class="subtotal">
+          <p>Subtotal (2 itens): <b> R$<%=total%></b></p>
         </div>
-        <div class="formas-pgto">
-          <i class="fa-solid fa-wallet"></i>
-          <input type="radio" name="pagamento" id="">
-          <label for="boleto">Boleto</label>
+        <div class="calcule-frete">
+          <p>Calcule o frete</p>
+          <form action="">
+            <input
+              type="text"
+              name="cep"
+              id="cep"
+              placeholder="Digite seu CEP"
+            />
+            <button type="submit">Calcular</button>
+          </form>
         </div>
-        <div class="formas-pgto">
-          <i class="fa-solid fa-credit-card"></i>
-          <input type="radio" name="pagamento" id="">
-          <label for="cartao">Cartão</label>
+      </section>
+      <section class="pagamento">
+        <h2>Forma de Pagamento</h2>
+        <div class="container">
+          <h3>Escolha sua forma de pagamento</h3>
+          <form action="">
+            <div class="formas-pgto">
+              <i class="fa-brands fa-pix"></i>
+              <input type="radio" name="pagamento" id="" />
+              <label for="pix">PIX</label>
+            </div>
+            <div class="formas-pgto">
+              <i class="fa-solid fa-wallet"></i>
+              <input type="radio" name="pagamento" id="" />
+              <label for="boleto">Boleto</label>
+            </div>
+            <div class="formas-pgto">
+              <i class="fa-solid fa-credit-card"></i>
+              <input type="radio" name="pagamento" id="" />
+              <label for="cartao">Cartão</label>
+            </div>
+            <div class="formas-pgto">
+              <i class="fa-solid fa-money-bill-transfer"></i>
+              <input type="radio" name="pagamento" id="" />
+              <label for="picpay">PicPay</label>
+            </div>
+          </form>
         </div>
-        <div class="formas-pgto">
-          <i class="fa-solid fa-money-bill-transfer"></i>
-          <input type="radio" name="pagamento" id="">
-          <label for="picpay">PicPay</label>
+      </section>
+      <section class="entrega">
+        <h2>Entrega</h2>
+        <div class="container">
+          <div class="forma-entrega">
+            <i class="fa-solid fa-truck"></i>
+            <input type="radio" name="entrega" id="" />
+            <label for="correios">Normal</label>
+          </div>
+          <div class="forma-entrega">
+            <i class="fa-solid fa-truck-fast"></i>
+            <input type="radio" name="entrega" id="" />
+            <label for="correios">Expressa</label>
+          </div>
         </div>
-      </form>
-    </div>
-  </section>
-  <section class="entrega">
-    <h2>Entrega</h2>
-    <div class="container">
-        <div class="forma-entrega">
-         <i class="fa-solid fa-truck"></i>
-         <input type="radio" name="entrega" id="">
-         <label for="correios">Normal</label>
+      </section>
+      <section class="produtos-relacionados">
+        <div>
+          <h2>Produtos Relacionados</h2>
         </div>
-        <div class="forma-entrega">
-          <i class="fa-solid fa-truck-fast"></i>
-          <input type="radio" name="entrega" id="">
-          <label for="correios">Expressa</label>
-        </div>
-    </div>
-  </section>
-  <section class="produtos-relacionados">
-    <div>
-        <h2>Produtos Relacionados</h2>
-    </div>
-    <div class="relacionados-img">
-        <div class="card">
-            <img src="images/notebook.jpg" alt="Notebook">
+        <div class="relacionados-img">
+          <div class="card">
+            <img src="images/notebook.jpg" alt="Notebook" />
             <button id="#">Ver Mais</button>
-        </div>
+          </div>
 
-        <div class="card">
-            <img src="images/GAMER.png" alt="">
+          <div class="card">
+            <img src="images/GAMER.png" alt="" />
             <button id="#">Ver Mais</button>
-        </div>
+          </div>
 
-        <div class="card">
-            <img src="images/CELULAR-SMARTPHONE_1645045581.png" alt="">
+          <div class="card">
+            <img src="images/CELULAR-SMARTPHONE_1645045581.png" alt="" />
             <button id="#">Ver Mais</button>
+          </div>
         </div>
-    </div>
-</section>
-
-</main>
-  
-</body>
+      </section>
+    </main>
+  </body>
 </html>
