--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -13,79 +13,24 @@
 
      <section class="destaques">
              
-         
+         <% produtos.forEach(produto =>{ %>
             <div class="card">
-                <img src="images/Xbox.jpg" width="150" height="130" alt="">
-            
-                <p>Console Microsoft Xbox <br> 
-                    Series S, 512GB, Branco
-                </p>
-            
-                <p>R$ 2.149,00</p>
-            
+                <img src="<%=produto.imagem%>" width="150" height="130" alt=""></img>
+                <p><%=produto.nome%></p>
+                <p><%=produto.preco%></p>
                 <span>À vista no pix</span>
-        
-                <button>Comprar</button>
-               
+                <div class="d-flex justify-content-between align-items-center cursor-pointer">
+                    <div class="btn-group">
+                        <a href="/produtos/<%=produto.id%>">
+                        <button type="button" class="btn btn-primary">Detalhes</button>
+                        </a>
+                        <button class="btn btn-primary">Comprar</button>
+                        
+                    </div>
+                </div>
+                              
             </div>
-
-            <div class="card">
-                <img src="images/monitor.jpg" width="150" height="130" alt="">
-            
-                <p>Monitor Gamer Acer Nitro<br> 
-                    VG0 27' IPS, 165hz full HD
-                </p>
-            
-                <p>R$ 1.500.00</p>
-            
-                <span>À vista no pix</span>
-        
-                <button>Comprar</button>
-               
-            </div>
-
-            <div class="card">
-                <img src="images/tv.jpg" width="150" height="130" alt="">
-            
-                <p>Samsung Smart Tv 43' <br> 
-                   UHD 4K AU7700
-                </p>
-            
-                <p>R$ 2.149,00</p>
-            
-                <span>À vista no pix</span>
-        
-                <button>Comprar</button>
-                
-            </div>
-
-            <div class="card">
-                <img src="images/notebook.jpg" width="150" height="130" alt="">
-            
-                <p>Notebook Asus Amd <br> 
-                   Ryzen - 5-3500U
-                </p>
-            
-                <p>R$ 2.989,00</p>
-            
-                <span>À vista no pix</span>
-        
-                <button>Comprar</button>
-            </div>
-               
-            <div class="card">
-                <img src="images/microfone.jpg" width="150" height="130" alt="">
-            
-                <p> Microfone Gamer HyperX <br> 
-                    Antivibração QuaadCast 
-            </p>
-            
-                <p>R$ 749,00</p>
-            
-                <span>À vista no pix</span>
-        
-                <button>Comprar</button>
-            </div>               
+        <% }) %>
         </section>
 
          <div class="muambas">
