--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,7 +33,7 @@
             <div class="cart">
 
                 <!-- INCLUIR LOGICA DE QUANTIDADE DE ITENS COMO SPAN QUANDO TIVER ITENS NO CARRINHO -->                                      
-                <button class="btn-carrinho"><a href="/carrinho"><i class="fa-solid fa-cart-shopping"></i></a></button>
+                <a href="/carrinho"><i class="fa-solid fa-cart-shopping"></i></a>
                 <span>Meu Carrinho de Muambas</span>
             </div>
            
