--- a/public/css/stylehome.css
+++ b/public/css/stylehome.css
@@ -38,33 +38,46 @@ body{
     
 }
     
-.card{
+.card {
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    width: 200px;
-    height: 410px;
+    width: 30rem;
+    height: 39rem;
     margin-bottom: 2rem;
     background-color: #fff;
     border-radius: .5rem;
     transition:0.5s ;
-    
+    text-overflow:ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.card a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-decoration: none;
 }
 .card:hover{
     transform: scale(1.1);
     
 }
 .card img{
-    padding-top: 2.5rem;
+    padding-top: 1.5rem;
+    max-width: 90px;
 }
 
 .card p {
+    max-width: 25ch;
     font-size: 2.2rem;
     line-height: 3rem;
+    text-align:center;
     color: rgb(66, 70, 77);
-    margin-top: 1rem
 }
 
 .card span{
@@ -80,6 +93,16 @@ body{
     color: #fff;
     font-size: 2rem;
     transition: .5s;
+    margin-top: 5rem;
+    cursor: pointer;
+    
+}
+
+.form-button {
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+    
 }
 .card button:hover{
     background-color: rgb(3, 132, 179);
