--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -13,14 +13,14 @@
 
         <section class="destaques">
 
-            <% produtos.forEach(produto=>{ %>   
-                    <div class="card">
-                        <a class="" href="/produtos/<%=produto.id %>">
+            <% produtos.forEach(produto=>{ %>
+                <div class="card">
+                    <a class="" href="/produtos/<%=produto.id %>">
                         <img src="<%=produto.imagem%>" width="150" height="130" alt=""></img>
                         <p>
-                            <% if (produto.nome.length > 20) { %>
+                            <% if (produto.nome.length> 20) { %>
                                 <%= produto.nome.substring(0, 20) %>...
-                            <% } %>
+                                    <% } %>
                         </p>
                         <p>
                             <%=produto.preco%>
@@ -36,12 +36,11 @@
                                     <button type="submit" name="btn2">Compre agora</button>
 
                                 </form>
-                                </a>
-                            </div>
-                        </div>
                     </a>
+                            </div>
+                         </div>
                 </div>
-           
+
                 <% }) %>
         </section>
 
@@ -309,81 +308,40 @@
         </div>
 
         <section class="destaques">
+            <% produtos.forEach(produto=>{ %>
+                <% if (produto.destaque==true) { %>
 
-            <div class="card">
-                <img src="images/Xbox.jpg" width="150" height="130" alt="">
+                    <div class="card">
 
-                <p>Console Microsoft Xbox <br>
-                    Series S, 512GB, Branco
-                </p>
+                        <a class="" href="/produtos/<%=produto.id %>"></a>
+                        <i class="bi bi-stars"></i>
+                        <img src="<%= produto.imagem%>" width="150" height="130" alt="">
 
-                <p>R$ 2.149,00</p>
+                        <% if (produto.nome.length> 20) { %>
+                            <p>
+                                <%= produto.nome.substring(0, 20) %>...
+                            </p>
+                            <% } %>
 
-                <span>À vista no pix</span>
+                                <p>R$ <%= produto.preco%>
+                                </p>
 
-                <button>Comprar</button>
+                                <span>À vista no pix</span>
 
-            </div>
+                                        <form class="form-button" action="/carrinho/adicionar" method="POST">
+                                            <input type="hidden" name="id" value="<%= produto.id %>" />
+                                            <input type="hidden" name="nome" value="<%= produto.nome %>" />
+                                            <input type="hidden" name="preco" value="<%= produto.preco %>" />
+                                            <input type="hidden" name="imagem" value="<%= produto.imagem %>" />
+                                            <button type="submit" name="btn2">Compre agora</button>
+                                        </form>
+                                </a>
+                    </div>
+                    <% } %>
+                        <% }) %>
 
-            <div class="card">
-                <img src="images/monitor.jpg" width="150" height="130" alt="">
-
-                <p>Monitor Gamer Acer Nitro<br>
-                    VG0 27' IPS, 165hz full HD
-                </p>
-
-                <p>R$ 1.500.00</p>
-
-                <span>À vista no pix</span>
-
-                <button>Comprar</button>
-
-            </div>
-
-            <div class="card">
-                <img src="images/tv.jpg" width="150" height="130" alt="">
-
-                <p>Samsung Smart Tv 43' <br>
-                    UHD 4K AU7700
-                </p>
-
-                <p>R$ 2.149,00</p>
-
-                <span>À vista no pix</span>
-
-                <button>Comprar</button>
-
-            </div>
-
-            <div class="card">
-                <img src="images/notebook.jpg" width="150" height="130" alt="">
-
-                <p>Notebook Asus Amd <br>
-                    Ryzen - 5-3500U
-                </p>
-
-                <p>R$ 2.989,00</p>
-
-                <span>À vista no pix</span>
-
-                <button>Comprar</button>
-            </div>
-
-            <div class="card">
-                <img src="images/microfone.jpg" width="150" height="130" alt="">
-
-                <p> Microfone Gamer HyperX <br>
-                    Antivibração QuaadCast
-                </p>
-
-                <p>R$ 749,00</p>
-
-                <span>À vista no pix</span>
-
-                <button>Comprar</button>
-            </div>
         </section>
-        <a class="todosProdutos" href="#">Todos os produtos</a>
+        <a class="todosProdutos" href="/lista">Todos os produtos</a>
 
         <h2 class="h2-departamentos">Departamentos</h2>
         <section class="departamentos">
