refatoramento de  card

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -313,8 +313,8 @@
 
                     <div class="card">
 
-                        <a class="" href="/produtos/<%=produto.id %>"></a>
                         <i class="bi bi-stars"></i>
+                        <a class="" href="/produtos/<%=produto.id %>">
                         <img src="<%= produto.imagem%>" width="150" height="130" alt="">
 
                         <% if (produto.nome.length> 20) { %>
