--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,17 +34,12 @@
 
                 <!-- INCLUIR LOGICA DE QUANTIDADE DE ITENS COMO SPAN QUANDO TIVER ITENS NO CARRINHO -->
                 <a href="/carrinho"><i class="fa-solid fa-cart-shopping"></i></a>
-                <% if (!locals.usuario && !usuario) { %>
-                    <span style="visibility:hidden ;" class="contador-carrinho"></span>
-                    <% } else { %>
-                        <span class="contador-carrinho">
-                            <%=locals.length%>
-                        </span>
-                        <% } %>
-                            <% if (locals.carrinho) { %>
-                                <span class="contador-carrinho">
-                                    <%= locals.carrinho.length%>
-                                </span>
+                        <% if(locals.carrinho) { %>
+                            <span style="display: reative;" class="contador-carrinho">
+                                <%= locals.carrinho.length%>
+                            </span>
+                            <% }else { %>
+                                <span style="display: none;" class="contador-carrinho"></span>
                                 <% } %>
                                     <span>Meu Carrinho de Muambas</span>
             </div>
