--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,12 +34,12 @@
 
                 <!-- INCLUIR LOGICA DE QUANTIDADE DE ITENS COMO SPAN QUANDO TIVER ITENS NO CARRINHO -->
                 <a href="/carrinho"><i class="fa-solid fa-cart-shopping"></i></a>
-                        <% if(locals.carrinho) { %>
-                            <span style="display: reative;" class="contador-carrinho">
+                        <% if(locals.carrinho && locals.carrinho.length > 0) { %>
+                            <span class="contador-carrinho">
                                 <%= locals.carrinho.length%>
                             </span>
                             <% }else { %>
-                                <span style="display: none;" class="contador-carrinho"></span>
+                                <span style="visibility: hidden;" class="contador-carrinho"></span>
                                 <% } %>
                                     <span>Meu Carrinho de Muambas</span>
             </div>
