--- a/public/css/carrinho.css
+++ b/public/css/carrinho.css
@@ -24,15 +24,21 @@ h1 {
   text-shadow: black 0.5rem 0.5rem 1rem;
 }
 
+.vazio {
+  margin-inline: 5rem;
+  padding-bottom: 4rem;
+  border-bottom: 1px solid black;
+}
+
 .container {
   background-color: #FFFFFF;
-  margin-top: 20px;
   margin-inline: 7rem;
   margin-bottom: 5rem;
   padding-bottom: 4rem;
 }
 
 .wrapper {
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -46,6 +52,7 @@ h1 {
   justify-content: center;
   align-items: center;
   gap: 7rem;
+  margin-block: 2rem;
 }
 
 /* .container img {
@@ -57,7 +64,7 @@ h1 {
   font-size: 1.8rem;
 }
 
-.descricao-produto form {
+.descricao-produto .qtd-del {
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -259,4 +266,28 @@ h1 {
 
 }
 
+.finalizar-compra {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.finalizar-compra button {
+  background-color: #59BCE1;
+  width: 40rem;
+  padding: 1.3rem;
+  border: none;
+  border-radius: .5rem;
+  cursor: pointer;
+  text-shadow: black 0.5rem 0.5rem 1rem;
+  color: #FFFFFF;
+
+  font-size: 4rem;
+
+  margin-top: 5rem;
+}
+
+.finalizar-compra button:hover {
+  background-color: #0384B3;
+
+}
