--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="css/footer.css">
 
 <footer>
-    <div class="container">
+    <div class="container-footer">
         <div class="row">
             <div class="footer-col">
                 <h4>Conheça-nos</h4>
